# MultiGPUEGTSmoothing

./: .gitignore  CGALHeaders.h  CMakeLists.txt  CUDA_MST.cu  CUDA_MST.cuh  EGT_CUDA.cu  EGT_CUDA.cuh  EGT_GKNN.cu  EGT_GKNN.cuh  EigenSolver.cuh  File.cu  GPU_Normal.cu  GPU_Normal.cuh  GridKNN.cu  GridKNNCuda.cu  GridKNNCuda.cuh  GridMeshCuda.cu  GridMeshCuda.cuh  GridMeshCuda1.cu  GridMeshCuda1.cuh  KNNInterface.cuh  LICENSE  MST.cpp  MST.h  Mesh.h  MeshPLY.cpp  MeshPLY.h  Normal_CUDA.cu  Normal_CUDA.cuh  README.md  bfs.cu  bfs.cuh  definitions.h  getOutputPoints.cu  getOutputPoints.cuh  main.cpp  miniply.cpp  miniply.h
